code6/c_test_compat130.c.error
c_test_compat130.c:27:22: error: field designator 'b' does not refer to any field in type 'struct S'
   27 |     struct S  s  ={ .b = 1 };
      |                     ~^~~~~
1 error generated.
